--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
 Revision history for Perl extension X11::Terminal.
 
-0.01 2010/06/27 Original version.
+0.02 2010/06/27 Add scrollback option (for XTerm)
+                Add support for Konsole
+                Documentation corrections
+
+0.01 2010/05/27 Original version.
