--- a/README
+++ b/README
@@ -21,14 +21,14 @@ PREREQUISITES
     Moose
 
 
-BUILDING/INSTALLING
+INSTALLATION
 
-  Once the archive is unpacked, use these commands:
+    Standard process for building & installing modules:
 
-      perl Makefile.PL
-      make
-      make test
-      make install
+      perl Build.PL
+      ./Build
+      ./Build test
+      ./Build install
 
 
 COPYRIGHT AND LICENCE
